fixed overlapping divs

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,38 +1,45 @@
-.workcontainer {
+.projectsContainer {
     width: 100%;
-    height: 175px;
     margin-bottom: 0px;
-    background-color: #E8EAEE;
+    max-width: 100%;
+    overflow: hidden;
+    z-index: -1;
+    background-color: #F7F7FB;
     box-sizing: border-box;
 }
 
 #projectsH1 {
-    position: absolute;
-    top: 67%;
-    right: 50px;
+    color: #110c16;
+    text-align: right;
+    z-index: 10;
+    position: relative;
+    line-height: 0.6em;
+    pointer-events: none;
+    top: 0px;
     font-family: quasimoda, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 65px;
-    color: #110c16;
-    margin-top: 10px;
+    margin-top: 0px;
+    margin-right: 5%;
     margin-bottom: 0px;
 }
 #yellowBar {
-    width: 100%;
-    max-width: 100%;
-    height: 35px;
     background-color: rgb(247, 239, 102);
-    position: relative;
-    top: 0px;
     box-sizing: border-box;
+    min-height: 50px;
+    position: relative;
+    overflow: hidden;
+    top: 0px;
+    z-index: 1;
 }
 .projects{
     display: grid;
     grid-template-columns: 1fr;
-    margin-top: 0px;
-    padding-bottom: 5%;
+    padding-top: 5%;
+    padding-bottom: 0%;
     background-color: #E8EAEE;
+    z-index: -1;
 }
 .arraynge{
     margin-left: 25px;
